<resources>
    <string name="app_name">First Trial</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_now">Login Now!</string>
    <string name="register_now">Register Now!</string>
    <string name="log_out">Log Out</string>
    <string name="hello">Hello!</string>
    <string name="send">Send</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="login_now_">Login now!</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="read_data">Read Data</string>
    <string name="food_item">Food Item</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
</resources>